.provarCaches/00D5h000009Q6XQEA0/objects/System_Event__c.object
<CustomObject>
    <fields>
        <fullName>Complete_Trace_String__c</fullName>
        <label>Complete Trace String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Component_Name__c</fullName>
        <label>Component Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Class</fullName>
                </value>
                <value>
                    <fullName>Apex Trigger</fullName>
                </value>
                <value>
                    <fullName>Lighting Flow</fullName>
                </value>
                <value>
                    <fullName>Platform Event</fullName>
                </value>
                <value>
                    <fullName>Batch Apex</fullName>
                </value>
                <value>
                    <fullName>Queueable Apex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <label>Line Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>System Event</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EVENT-{000000}</displayFormat>
        <label>Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>